--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -2,6 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import 'common.scss';
+@import 'font.scss';
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,8 +20,6 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -28,8 +28,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 14px;
   line-height: 1;
-  background-color:#efefef
+  background:$bgColor;
 }
 ol, ul {
 	list-style: none;
