Update scss config

--- a/src/assets/scss/components/app.scss
+++ b/src/assets/scss/components/app.scss
@@ -1,8 +1,11 @@
+@import '../base';
+
 .side_menu{
   float: left;
   width:220px;
   .user_profile{
     height:200px;    
+    background-color: $subColor1;
   }
 }
 .main{
