--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,10 +1,28 @@
-$bgColor: #0D101C;
-$mainColor:#FF9352;
-$subColor1:#636BFF;
-$subColor2:#EF2778;
-$subColor3:#696AFF;
-$subColor4:#26A3FF;
-$subColor5:#4CD964;
-$mainFontColor:#e8e8e9;
-$subFontColor:#8e9ba9;
-$emphColor:#FFC310;
+// color value
+$bgColor:#252830;
+$lineColor:#434857;
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #28a745;
+$teal: #20c997;
+$cyan: #17a2b8;
+$white: #fff;
+$gray: #6c757d;
+$gray-dark: #343a40;
+$primary: #1997c6;
+$secondary: #6c757d;
+$success: #1BC98E;
+$info: #9F86FF;
+$warning: #E4D836;
+$danger: #E64759;
+$light: #f8f9fa;
+$dark: #1a1c22;
+
+// size value
+$headerHeight:50px;
+$radius:37%;
