--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -1,6 +1,6 @@
 @import '../../assets/scss/base';
 .app_wrapper{
-  
+
 }
 
 .app_main{
@@ -10,13 +10,15 @@
   min-height:100vh;
   margin:0 auto;
   padding-top:$headerHeight;
+  border:1px solid $lineColor;
+  box-sizing:border-box;
   .app_content{
     height:100%;
     padding:10px;
   }
   .app_section{
     padding-bottom:10px;
-    border-bottom:1px solid $yellow;
+    border-bottom:2px solid $lineColor;
   }
 }
 
