--- a/src/components/TitleBox/index.scss
+++ b/src/components/TitleBox/index.scss
@@ -1,9 +1,15 @@
+@import '../../assets/scss/base';
+
 .box_tit{
   padding:10px;
   .txt_tit{
-    font-size:50px;
+    padding-bottom:10px;
+    font-size:32px;
+    border-bottom:3px solid $lineColor;
   }
   .txt_desc{
-
+    padding:10px;
+    font-size:20px;
+    font-weight:300;
   }
 }
