--- a/src/components/ProjectList/index.scss
+++ b/src/components/ProjectList/index.scss
@@ -1,85 +1,87 @@
 @import '../../assets/scss/base';
 
-.list_project{
-  overflow: hidden;
-  > li {
-    position:relative;
-    float:left;
-    width:280px;
-    height:300px;
-    padding:10px;
-  }
-  .link_project{
-    display:block;
-    height:100%;
-  }
-  .card_project{
-    overflow:hidden;
-    height:100%;
-    border:1px solid $lineColor;
-    border-radius:$frameRadius;
-    box-sizing:border-box;
-    .card_bg{
-      height:120px;
-      background-image:url($defaultPath + '/default_card_bg.png');
+.comp_project_list{
+  .list_project{
+    overflow: hidden;
+    > li {
+      position:relative;
+      float:left;
+      width:280px;
+      height:300px;
+      padding:10px;
     }
-    .card_img{
+    .link_project{
+      display:block;
+      height:100%;
+    }
+    .card_project{
       overflow:hidden;
-      position:absolute;
-      top:40px;
-      left:40px;
-      width:100px;
-      height:100px;
+      height:100%;
       border:1px solid $lineColor;
-      border-radius:$thumbRadius;
+      border-radius:$frameRadius;
       box-sizing:border-box;
+      .card_bg{
+        height:120px;
+        background-image:url($defaultPath + '/default_card_bg.png');
+      }
+      .card_img{
+        overflow:hidden;
+        position:absolute;
+        top:40px;
+        left:40px;
+        width:100px;
+        height:100px;
+        border:1px solid $lineColor;
+        border-radius:$thumbRadius;
+        box-sizing:border-box;
+      }
+      .card_cont{
+        padding:20px;    
+        .tit_cont{
+          display:block;
+          padding:10px 0;
+          color:$white;
+          font-size:28px;
+        }
+        .txt_info{
+          display:block;
+          padding:4px 0;
+          color:$light;
+        }
+      }
+      .btn_add{
+        overflow:hidden;
+        position:absolute;
+        top:calc(50% - 50px);
+        left:calc(50% - 50px);
+        width:100px;
+        height:100px;
+        border:1px solid $lineColor;
+        border-radius:$thumbRadius;
+        box-sizing:border-box;
+      }
     }
-    .card_cont{
-      padding:20px;    
-      .tit_cont{
-        display:block;
-        padding:10px 0;
+    .group_btn{
+      position:absolute;
+      top:20px;
+      right:20px;
+      > button{
+        width:30px;
+        height:30px;
         color:$white;
-        font-size:28px;
+        font-weight:600;
+        border:1px solid $lineColor;
+        border-radius:$thumbRadius;
       }
-      .txt_info{
-        display:block;
-        padding:4px 0;
-        color:$light;
+      button + button {
+        margin-left:10px;
       }
-    }
-    .btn_add{
-      overflow:hidden;
-      position:absolute;
-      top:calc(50% - 50px);
-      left:calc(50% - 50px);
-      width:100px;
-      height:100px;
-      border:1px solid $lineColor;
-      border-radius:$thumbRadius;
-      box-sizing:border-box;
-    }
-  }
-  .group_btn{
-    position:absolute;
-    top:20px;
-    right:20px;
-    > button{
-      width:30px;
-      height:30px;
-      color:$white;
-      font-weight:600;
-      border:1px solid $lineColor;
-      border-radius:$thumbRadius;
-    }
-    button + button {
-      margin-left:10px;
-    }
-    .btn_update{
-      background-color:$cyan;
-    }
-    .btn_remove{
-      background-color:$red;
+      .btn_update{
+        background-color:$cyan;
+      }
+      .btn_remove{
+        background-color:$red;
+      }
     }
   }
 }
