--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,5 +1,5 @@
 // color value
-$bgColor:#252830;
+$bgColor:#1b1d24;
 $lineColor:#434857;
 $blue: #007bff;
 $indigo: #6610f2;
@@ -22,12 +22,64 @@ $warning: #E4D836;
 $danger: #E64759;
 $light: #f8f9fa;
 $dark: #1a1c22;
-
+$dark2: #1e2128;
+$borderColor:rgba(255,255,255,.15);
 // size value
 $headerHeight:50px;
-$frameRadius:4%;
-$thumbRadius:40%;
+// $frameRadius:4%;
+// $thumbRadius:40%;
+
+$frameRadius:5px;
+$thumbRadius:50%;
 
 // paht value
 $imgPath: '/images';
-$defaultPath: $imgPath + '/default'
+$defaultPath: $imgPath + '/default';
+
+// trnasition 
+
+    
+
+$linear         : cubic-bezier(.250, 0.250, 0.750, 0.750) ;
+$ease           : cubic-bezier(.250, 0.100, 0.250, 1.000) ;
+$ease-in        : cubic-bezier(.420, 0.000, 1.000, 1.000) ;
+$ease-out       : cubic-bezier(.000, 0.000, 0.580, 1.000) ;
+$ease-in-out    : cubic-bezier(.420, 0.000, 0.580, 1.000) ;
+$easeInQuad     : cubic-bezier(.550, 0.085, 0.680, 0.530) ;
+$easeInCubic    : cubic-bezier(.550, 0.055, 0.675, 0.190) ;
+$easeInQuart    : cubic-bezier(.895, 0.030, 0.685, 0.220) ;
+$easeInQuint    : cubic-bezier(.755, 0.050, 0.855, 0.060) ;
+$easeInSine     : cubic-bezier(.470, 0.000, 0.745, 0.715) ;
+$easeInExpo     : cubic-bezier(.950, 0.050, 0.795, 0.035) ;
+$easeInCirc     : cubic-bezier(.600, 0.040, 0.980, 0.335) ;
+$easeInBack     : cubic-bezier(.600, -0.280, 0.735, 0.045) ;
+$easeOutQuad    :  cubic-bezier(.250, 0.460, 0.450, 0.940) ;
+$easeOutCubic   :  cubic-bezier(.215, 0.610, 0.355, 1.000) ;
+$easeOutQuart   :  cubic-bezier(.165, 0.840, 0.440, 1.000) ;
+$easeOutQuint   :  cubic-bezier(.230, 1.000, 0.320, 1.000) ;
+$easeOutSine    :  cubic-bezier(.390, 0.575, 0.565, 1.000) ;
+$easeOutExpo    :  cubic-bezier(.190, 1.000, 0.220, 1.000) ;
+$easeOutCirc    :  cubic-bezier(.075, 0.820, 0.165, 1.000) ;
+$easeOutBack    :  cubic-bezier(.175, 0.885, 0.320, 1.275) ;
+$easeInOutQuad  :  cubic-bezier(.455, 0.030, 0.515, 0.955) ;
+$easeInOutCubic :  cubic-bezier(.645, 0.045, 0.355, 1.000) ;
+$easeInOutQuart :  cubic-bezier(.770, 0.000, 0.175, 1.000) ;
+$easeInOutQuint :  cubic-bezier(.860, 0.000, 0.070, 1.000) ;
+$easeInOutSine  :  cubic-bezier(.445, 0.050, 0.550, 0.950) ;
+$easeInOutExpo  :  cubic-bezier(1.000, 0.000, 0.000, 1.000) ;
+$easeInOutCirc  :  cubic-bezier(.785, 0.135, 0.150, 0.860) ;
+$easeInOutBack  :  cubic-bezier(.680, -0.550, 0.265, 1.550) ;
+
+//mixin
+
+@mixin transitionEase($property, $timing){
+  transition:$property  $timing;
+}
+
+@mixin comm_box( $height, $padding, $width:100%) {
+  width:$width;
+  height:$height;
+  padding:$padding;
+  background: #1e2127;
+  box-shadow: -7.829px 11.607px 18px 0px rgba(0, 0, 0, 0.13);
+}
