--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -31,7 +31,7 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
 	font-size: 14px;
 	color:$light;
-	background:$bgColor;
+  background:$bgColor;
   line-height: 1;
 }
 a{
@@ -52,6 +52,9 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+button,label{
+  cursor: pointer;
 }
 
 /* global */
