--- a/src/components/ProjectList/index.scss
+++ b/src/components/ProjectList/index.scss
@@ -1,14 +1,16 @@
 @import '../../assets/scss/base';
 
 .comp_project_list{
+  padding-top: 48px;
   .list_project{
     overflow: hidden;
+    margin:0 -12px;
     > li {
       position:relative;
       float:left;
-      width:280px;
-      height:300px;
-      padding:10px;
+      width:305px;
+      height: 324px;;
+      padding:12px;
     }
     .link_project{
       display:block;
@@ -17,48 +19,66 @@
     .card_project{
       overflow:hidden;
       height:100%;
-      border:1px solid $lineColor;
       border-radius:$frameRadius;
+      background: $bgColor;
       box-sizing:border-box;
       .card_bg{
         height:120px;
         background-image:url($defaultPath + '/default_card_bg.png');
       }
+      // .card_img{
+      //   overflow:hidden;
+      //   position:absolute;
+      //   top:40px;
+      //   left:40px;
+      //   width:100px;
+      //   height:100px;
+      //   border:1px solid $lineColor;
+      //   border-radius:$thumbRadius;
+      //   box-sizing:border-box;
+      // }
       .card_img{
         overflow:hidden;
         position:absolute;
-        top:40px;
+        top:105px;
         left:40px;
-        width:100px;
-        height:100px;
-        border:1px solid $lineColor;
+        width:50px;
+        height:50px;
         border-radius:$thumbRadius;
-        box-sizing:border-box;
-      }
+      }      
       .card_cont{
-        padding:20px;    
+        // padding:20px;    
+        padding:40px 30px 30px;
         .tit_cont{
           display:block;
-          padding:10px 0;
+          margin-bottom: 15px;
+          // padding:10px 0;
           color:$white;
-          font-size:28px;
+          // font-size:28px;
+          font-weight: normal;
+          font-size:22px;
         }
         .txt_info{
           display:block;
-          padding:4px 0;
+          margin-bottom: 5px;          
           color:$light;
         }
       }
       .btn_add{
-        overflow:hidden;
-        position:absolute;
-        top:calc(50% - 50px);
-        left:calc(50% - 50px);
-        width:100px;
-        height:100px;
+        display: block;
+        position: relative;
+        width:60px;
+        height:60px;
+        margin:120px auto;
+        font-size: 30px;               
         border:1px solid $lineColor;
         border-radius:$thumbRadius;
-        box-sizing:border-box;
+        line-height: 60px;
+        color: $danger;    
+        @include transitionEase($easeInOutExpo , .5s);
+        &:hover{
+          transform: rotate(360deg)
+        }     
       }
     }
     .group_btn{
@@ -70,7 +90,9 @@
         height:30px;
         color:$white;
         font-weight:600;
-        border:1px solid $lineColor;
+        // border:1px solid $lineColor;
+        border: none;
+        font-size: 15px;
         border-radius:$thumbRadius;
       }
       button + button {
