--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -5,18 +5,29 @@
   top:0;
   left:0;
   right:0;
-  height:50px;
-  background-color:$dark;
+  height:65px;
+  background-color:$bgColor;
   z-index:1000;
-  text-align:center;
-  border-bottom:1px solid $yellow;
+  border-bottom:1px solid $borderColor;
   box-sizing:border-box;
-  .app_tit{
-    position:absolute;
-    top:0;
-    left:0;
-    height:50px;
-    padding:0 10px;
-    line-height:50px;
+  .app_logo{
+    overflow: hidden;
+    float: left;
+    width: 240px;
+    height: 65px;
+    padding-left:24px;
+    border-bottom: 1px solid $borderColor;
+    line-height: 65px;
+    background: $dark2;
+    .img_logo{
+      float: left;
+      height: 40px;
+      margin: 12px 15px 0 0;
+    }
+    .app_tit{
+      display: block;
+      overflow: hidden; 
+      font-size: 24px;     
+    }
   }
 }
