update login & user menu

--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -1,6 +1,5 @@
 @import '../../assets/scss/base';
 .btn_login{
-  float: right;
   overflow: hidden;
   width:60px;
   height: 60px;
@@ -10,5 +9,23 @@
   img{
     display: block;
     width:100%;
+  }
+}
+.login_comp{
+  .default_profile{
+    .profile_img{
+      display: block;
+      overflow: hidden;
+      width:100px;
+      height: 100px;
+      margin: auto;
+      border-radius: 50%;
+      border:1px solid #6A6E7C;
+      img{
+        display: block;
+        width: 80%;
+        margin: 20px auto;
+      }
+    }
   }
 }
