--- a/src/components/ProjectList/index.scss
+++ b/src/components/ProjectList/index.scss
@@ -1,39 +1,74 @@
 @import '../../assets/scss/base';
 
 .comp_project_list{
-  padding-top: 48px;
-  
+  line-height:30px;
+  .done{
+    background-color:$green;
+  }
+  .doing{
+    background-color:$orange;
+  }
+  .todo{
+    background-color:$gray;
+  }
   .list_project{
     > li{
       position: relative;
-      margin-bottom:10px;
-      border:1px solid gray;
+      margin-bottom:20px;
+      padding:0 100px 0 200px;
+      box-sizing:border-box;
     }
     li:hover{
-      background-color:gray;
+      background-color:$lineColor;
+      
     }
     .card_project{
       height:50px;
       // background-color:gold;
-      .txt_state{
-        display:block;
-        height:100%;
-        width:2%;
-        color:#fff;
+      .card_state{
+        position:absolute;
+        top:10px;
+        left:10px;
+        bottom:10px;
+        width:80px;
+        text-align:center;
+        border-radius:12%;
+        .txt_state{
+          display:block;
+          width:100%;
+          height:100%;
+          color:#fff;
+        }
       }
-      .done{
-        background-color:green;
+      .card_percent{
+        position:absolute;
+        top:20px;
+        left:110px;
+        bottom:20px;
+        width:80px;
       }
-      .doing{
-        background-color:gold;
-      }
-      .todo{
-        background-color:red;
+      .card_cont{
+        overflow:hidden;
+        padding:10px;
+        .tit_cont{
+          font-size:20px;
+        }
+        .txt_info{
+          display:inline-block;
+          margin-left:10px;
+        }
+        .txt_percent{
+          display:inline-block;
+          width:300px;
+          height:10px;
+          padding:10px;
+        }
       }
     }
     .link_project{
       display:block;
       height:100%;
+      color:$white;
     }
     .group_btn{
       position:absolute;
