--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -2,79 +2,196 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import 'base';
-*{box-sizing:border-box}
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	vertical-align: baseline;
+@import "base";
+* {
+  box-sizing: border-box;
+}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-  font-family: 'Noto Sans KR', sans-serif;
-	font-size: 14px;
-	color:$light;
-  background:$bgColor;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
+  color: $light;
+  background: $bgColor;
   line-height: 1;
 }
-a{
-	color:$yellow;
-	text-decoration:none;
+a {
+  color: $yellow;
+  text-decoration: none;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-button,label{
+button,
+label {
   cursor: pointer;
+}
+button {
+  background: none;
+  border: none;
 }
 
 /* global */
 
-.screen_out{
-	overflow:hidden;
-	position:absolute;
-	width:0;
-	height:0;
-	line-height:0;
-	text-indent:-9999px;
+.screen_out {
+  overflow: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+  line-height: 0;
+  text-indent: -9999px;
 }
-.img_thumb{
-	display:block;
-	width:100%;
+.img_thumb {
+  display: block;
+  width: 100%;
 }
 
-.txt_ellipsis{
-	overflow:hidden;
-	text-overflow:ellipsis;
-	white-space:nowrap;
-	word-wrap:normal;
+.txt_ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+.c_f {
+  &:after {
+    display: block;
+    clear: both;
+    content: "";
+  }
+}
+.f_l {
+  float: left;
+}
+.f_r {
+  float: right;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #999;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  height: 50px;
+  width: 50px;
+  background: #333;
+  border-radius: 8px;
 }
