--- a/src/components/WorkList/index.scss
+++ b/src/components/WorkList/index.scss
@@ -3,16 +3,20 @@
   // display: grid;
   // grid-template-columns: 1fr 1fr 1fr;
   // grid-gap: 20px;
-  overflow: hidden;
-  margin: 0 -12px;
+  position: relative;
+  .list_work {
+    overflow: hidden;
+    margin: 0 -12px;
+  }
   li {
     float: left;
     width: 380px;
-    margin: 0 12px;
+    height: 430px;
+    margin: 0 12px 24px;
     overflow: hidden;
     position: relative;
     border-radius: 10px;
-    padding: 50px 30px 24px;
+    padding: 50px 30px 0;
     background: #1b1d24;
     .c_f {
       margin-bottom: 20px;
@@ -77,46 +81,67 @@
       }
     }
   }
-}
-.member_list_comp {
-  overflow-x: auto;
-  display: flex;
-  padding-bottom: 10px;
-  -webkit-overflow-scrolling: auto;
-  border-bottom: 1px solid $borderColor;
-  margin-bottom: 20px;
-  .member_profile {
-    width: 60px;
-    margin-right: 10px;
-  }
-  .member_img {
-    display: block;
-    margin: 0 auto 8px;
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    border-radius: 50%;
-    img {
-      width: 100%;
+  .member_list_comp {
+    overflow-x: auto;
+    display: flex;
+    padding-bottom: 10px;
+    -webkit-overflow-scrolling: auto;
+    border-bottom: 1px solid $borderColor;
+    margin-bottom: 20px;
+    .member_profile {
+      width: 60px;
+      margin-right: 10px;
+    }
+    .member_img {
+      display: block;
+      margin: 0 auto 8px;
+      width: 50px;
+      height: 50px;
+      overflow: hidden;
+      border-radius: 50%;
+      img {
+        width: 100%;
+      }
+    }
+    .member_name {
+      display: block;
+      text-align: center;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
-  .member_name {
+  .btn_detail {
     display: block;
+    width: 100%;
+    background: #0093ff;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    height: 40px;
+    font-size: 15px;
     text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    line-height: 40px;
   }
-}
-.btn_detail {
-  display: block;
-  width: 100%;
-  background: #0093ff;
-  border: none;
-  color: #fff;
-  border-radius: 4px;
-  height: 40px;
-  font-size: 15px;
-  text-align: center;
-  line-height: 40px;
+  .wrap_btn {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    margin-top: -50px;
+    i {
+      display: block;
+      font-size: 30px;
+      margin-bottom: 5px;
+    }
+    .btn_more {
+      display: block;
+      width: 100px;
+      height: 100px;
+      padding-top: 25px;
+      border-radius: 50%;
+      text-align: center;
+      background: #1b1d24;
+      color: #ff4a7a;
+    }
+  }
 }
