--- a/src/components/lists/WorkList/index.scss
+++ b/src/components/lists/WorkList/index.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/base";
+@import "../../../assets/scss/base";
 .work_list_comp {
   // display: grid;
   // grid-template-columns: 1fr 1fr 1fr;
